@@ -4,6 +4,7 @@
 ----------
 v0.7.8 (??.09.2010)
  * It is possible to show team notes in profile view. Link is build in team view.
+ * Filter class for matchtable
 
 v0.7.7 (26.09.2010)
  * Character browser in stadium list
